# CN-ns3-project

./: CMakeLists.txt  IMAGE_SETUP.md  LICENSE  Makefile  Makefile-compact  README.md  README_ENHANCED.md  analyze_results.py  compact-classifier  compact-classifier.cc  compact-classifier.xml  compact-football.xml  compact-sim  compact-sim.cc  compact_analysis.py  compact_classifier.h  footballer-network-sim.cc  image_analysis.py  image_classifier.cpp  image_classifier.h  image_config.txt  requirements.txt  run_scenarios.py  run_simulation.sh  setup_images.sh  simulation_config.ini  wscript
models/: README.md  classifier.ipynb  streamlit_app.py
